--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,9 +1,23 @@
-.container {
-  margin: 20px auto;
-  width: 600px;
-  padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
+ul 
+{
+  list-style-type: none;
 }
-th {
-  text-align: left;
+
+li 
+{
+  height: 40px;
+  width:  40px;
+  border: 1px solid black;
+  display:inline-block;
+}
+
+#b .active 
+{
+  background-color: black;
+  
+}
+
+#a .active
+{
+  background-color:red;
 }
